<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="388dp"-->
    <!--        android:layout_height="619dp"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:src="@drawable/splash"-->
    <!--        android:transitionName="logo_image"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <ImageView-->
    <!--        android:layout_width="50dp"-->
    <!--        android:layout_height="50dp"-->
    <!--        android:src="@mipmap/iconmain"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/imageView"-->
    <!--        tools:ignore="MissingConstraints"-->
    <!--        tools:layout_editor_absoluteX="161dp" />-->


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:src="@mipmap/iconmain"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/exousia"
        android:layout_marginTop="20dp"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="157dp" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="400dp"
        android:layout_height="121dp"
        android:src="@drawable/ui"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/we_digitalized_all_your_government_authorities"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.592" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/from"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        android:layout_marginTop="140dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="605dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sandeep"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</LinearLayout>